<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_travesia"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/travesiamenu"/>
        <item
            android:id="@+id/nav_status_sync"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/statusmenu" />
        <item
            android:id="@+id/nav_historial"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/historialmenu" />
        <item
            android:id="@+id/nav_sincronizar"
            android:icon="@android:drawable/ic_menu_rotate"
            android:title="@string/sincronizarmenu" />
        <item
            android:id="@+id/nav_cerrarsesion"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/cerrarsesionmenu" />
    </group>

</menu>
