<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="zentcode02.parks.DebugFragment">

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/btnIniciarServicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciarServicio"
        android:onClick="startAlarm" />

    <Button
        android:id="@+id/btnCancelarServicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelarServicio"
        android:onClick="cancelAlarm" />

    <Button
        android:id="@+id/btnLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"/>

</LinearLayout>
