<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="zentcode02.parks.utils.ImageUpload">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageViewUpload"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/imagen" />

        <Button
            android:id="@+id/btnAgregarImagen"
            android:text="@string/agregarImagen"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btnCambiarImagen"
            android:text="@string/cambiarImagen"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</ScrollView>
