<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="zentcode02.parks.LoginActivity"
    android:gravity="center_horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        tools:context="zentcode02.parks.LoginActivity">

        <LinearLayout
            android:id="@+id/logo_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/txt_logo"
                android:text="@string/sgn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/textWhite"
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:id="@+id/txt_logo_desc"
                android:text="@string/sgn_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/textWhite"
                android:layout_gravity="center"
                android:gravity="center"/>

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/login_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardUseCompatPadding="true"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:text="@string/prompt_email"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/edtUserEmail"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:scrollHorizontally="true"/>

                <TextView
                    android:text="@string/prompt_password"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/edtUserPassword"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:inputType="textPassword"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:scrollHorizontally="true"/>

                <Button
                    android:id="@+id/btnLogin"
                    android:text="@string/action_sign_in_short"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/textWhite"
                    android:background="@color/asgardButton"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
