<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelNombreUnidad"
                android:text="@string/embarcacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtNombreUnidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:focusable="true"
                android:focusableInTouchMode="true"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:text="@string/verificadoPor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtVerificadoPor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:text="@string/revisadoPor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtRevisadoPor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/fechacabecera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants">

            <TextView
                android:id="@+id/txtFechaCabecera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:clickable="true"
                android:focusableInTouchMode="false"/>

        </LinearLayout>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rgCabeceraCheck"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal|center_vertical">

        <RadioButton
            android:text="@string/rbinicioviaje"
            android:id="@+id/rb_inicio_viaje"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:text="@string/rbfinviaje"
            android:id="@+id/rb_fin_viaje"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

    </RadioGroup>

</LinearLayout>