<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="zentcode02.parks.fragments.ReportErrorsFragment">

    <TextView
        android:text="@string/detalles"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp">

            <TextView
                android:id="@+id/statusLabel"
                android:text="@string/statusSync"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/syncStatusContainer"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/statusSync"
                android:textColor="@color/textWhite"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp">

            <TextView
                android:id="@+id/regSyncOkLabel"
                android:text="@string/regSyncOk"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/regSyncOk"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp">

            <TextView
                android:id="@+id/regSyncPendingLabel"
                android:text="@string/regSyncPending"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/regSyncPending"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/reportErrorsContainer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:gravity="center">

        <TextView
            android:id="@+id/txtCountErrors"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"/>

        <Button
            android:id="@+id/btnReportErrors"
            android:text="@string/reportarErrores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        </LinearLayout>

</LinearLayout>
